added soups section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <ul class="navbar" id="home">
         <li><a href="#home">Recipes</a></li>
         <li><a href="#mains">Main Courses</a></li>
-        <li><a href="#sides">Sides</a></li>
+        <li><a href="#soups">Soups</a></li>
+        <li><a href="#sides">Sides & Snacks</a></li>
         <li><a href="#baking">Baking</a></li>
         <li><a href="#drinks">Drinks</a></li>
         <li class="right"><a href="glist.html">Grocery List</a></li>
@@ -224,34 +225,6 @@
         </ol>
     </div>
 
-    <div id="spicyhotpot">
-        <button class="name matt">Spicy American Hot Pot</button>
-        <div class="recipe">
-            <ul class="ingredients">
-                <li>20-40 green beans (4 small servings), trimmed and cut</li>
-                <li>1 + 1/2 green bell pepper, sliced</li>
-                <li>3 white mushrooms, sliced</li>
-                <li>3/4 Chayotte squash, cubed</li>
-                <li>8oz Beef (ribeye or top/bottom round), thinly sliced</li>
-                <li>1/2 Tbsp + a little bit more Chili crisp oil</li>
-                <li>1/4 Tbsp garlic, minced</li>
-                <li>1 slice of garlic</li>
-                <li>8 tsp beef bouillon</li>
-                <li>8 cups of water</li>
-                <li>Fresh basil</li>
-            </ul>
-            <ol class="instructions">
-                <li>Make the soup base with the water, garlic, ginger, beef bouillon, and chili crisp oil. Bring to a
-                    strong simmer</li>
-                <li>The green beans and bell pepper need to cook for 10 minutes, mushrooms 5 minutes, and chayotte only
-                    2-3 minutes</li>
-                <li>Add the beef to the serving bowl. Spoon some of the boiling liquid into the bowl and mix to separate
-                    the slices. Then fill the bowl with your serving of soup and vegetables and DO NOT STIR for about 5
-                    minutes. Let the heat cook the beef</li>
-            </ol>
-        </div>
-    </div>
-
     <div id="pineapplechutney">
         <button class="name matt">Pineapple Chutney Dogs</button>
         <div class="recipe">
@@ -309,7 +282,36 @@
         </ol>
     </div>
 
-    <h2>Soups</h2>
+    <h2 id="soups">Soups</h2>
+
+    <div id="spicyhotpot">
+        <button class="name matt">Spicy American Hot Pot</button>
+        <div class="recipe">
+            <ul class="ingredients">
+                <li>20-40 green beans (4 small servings), trimmed and cut</li>
+                <li>1 + 1/2 green bell pepper, sliced</li>
+                <li>3 white mushrooms, sliced</li>
+                <li>3/4 Chayotte squash, cubed</li>
+                <li>8oz Beef (ribeye or top/bottom round), thinly sliced</li>
+                <li>1/2 Tbsp + a little bit more Chili crisp oil</li>
+                <li>1/4 Tbsp garlic, minced</li>
+                <li>1 slice of garlic</li>
+                <li>8 tsp beef bouillon</li>
+                <li>8 cups of water</li>
+                <li>Fresh basil</li>
+            </ul>
+            <ol class="instructions">
+                <li>Make the soup base with the water, garlic, ginger, beef bouillon, and chili crisp oil. Bring to a
+                    strong simmer</li>
+                <li>The green beans and bell pepper need to cook for 10 minutes, mushrooms 5 minutes, and chayotte only
+                    2-3 minutes</li>
+                <li>Add the beef to the serving bowl. Spoon some of the boiling liquid into the bowl and mix to separate
+                    the slices. Then fill the bowl with your serving of soup and vegetables and DO NOT STIR for about 5
+                    minutes. Let the heat cook the beef</li>
+            </ol>
+        </div>
+    </div>
+
     <button class="name matt" id="eggdrop">Matt's Simple Eggdrop</button>
     <div class="recipe">
         <ul class="ingredients">
